# nixos-config

./: .gitignore  .gitmodules  .sops.yaml  README.md  combine_files.sh  flake.nix  justfile  my_nixos.txt  shell.nix
hosts/: common.nix  daniil.nix  server-common.nix
hosts/a15/: configuration.nix  default.nix  disko-config.nix  hardware-configuration.nix  home.nix
hosts/vps/: configuration.nix  default.nix  hardware-configuration.nix
modules/: firefox.nix  git.nix  steam.nix
modules/desktops/: default.nix  hyprland.nix  kde.nix
modules/llm/: claude.nix  code_cursor.nix  default.nix  ollama.nix
modules/neovim/: default.nix  packages.nix
modules/neovim/astronvim/: default.nix
modules/neovim/astronvim/astronvim_user/: init.lua  mappings.lua
modules/neovim/lazyvim/: default.nix
modules/neovim/lazyvim/lua/config/: autocmds.lua  keymaps.lua  lazy.lua  lsp.lua  options.lua  ui-select.lua
modules/neovim/lazyvim/lua/plugins/: avante-provider.lua  avante.lua  blink.lua  colorscheme.lua  copilot.lua  debug.lua  formatting.lua  linting.lua  lsp-debug.lua  lsp-inspector.lua  lsp-keymaps.lua  neo-tree.lua  neotest-debug.lua  nix.lua  obsidian.lua  python.lua  remote.lua  snacks.lua  (+5 more)
modules/shell/: default.nix  misc.nix  p10k.zsh  starship.nix  tmux.nix  zellij.nix  zsh.nix
modules/sops/: default.nix
modules/terminal/: default.nix  wezterm.nix
modules/virtualization/: default.nix  docker.nix  wine.nix
modules/vpn/: client.nix  default.nix  hiddify_next.nix  server.nix
secrets/: secrets.yaml
templates/python/: .editorconfig  flake.nix  pyproject.toml
